list of static data added

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,7 +17,7 @@
   z-index: -1;
   
   display: block;
-  background-image: url('./images/moscowMule.jpg');
+  background-image: url('./components/images/moscowMule.jpg');
   background-size:cover;
   width: 110%;
   height: 110%;
