--- a/src/components/recipe/Recipe.scss
+++ b/src/components/recipe/Recipe.scss
@@ -7,10 +7,9 @@
 .about-drink-container {
     width: 100%;
     height: 250px;
-    background-image: url('../images/moscowMule.jpg');
     background-size: cover;
-    background-position: center;
     background-repeat: no-repeat;
+    background-position: 50% 50%;
 }
 
 #recipe-title {
