--- a/src/routes/frontPage/FrontPage.scss
+++ b/src/routes/frontPage/FrontPage.scss
@@ -1,9 +1,7 @@
 #cocktails-section {
     background-color: white;
-    margin-right: 0%;
-    margin-left: 0%;
-    padding-bottom: 60%;
-    padding-top: 10%;
+    padding-bottom: 10%;
+    padding-top: 8%;
 }
 
 #web-title {
@@ -16,7 +14,7 @@
 }
 
 .card-image-cocktail {
-    height: 140px;
+    min-height: 140px;
 }
 
 #cocktails-section {
