--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,14 @@
 
 .App {
   text-align: center;
+  height: 100%;
 }
 
 .mdc-tab-ink-color {
   color: black;
 }
 
-.parallax:before {
+.parallax {
   content: "";
   position: fixed;
   top: -5%;
@@ -29,8 +30,7 @@
   filter: blur(5px);
 }
 
-.parallax {
-  overflow: auto;
+#consumer-div {
   position: relative;
   height: 100%;
 }
