--- a/src/routes/createCocktail/createCocktail.scss
+++ b/src/routes/createCocktail/createCocktail.scss
@@ -1,5 +1,29 @@
+
+.main-div-createCocktail {
+    margin: 10%;
+}
+
+.createCocktail {
+    padding: 5%;
+}
+
+.card-createCocktail {
+    margin-top: 2%;
+    margin-bottom: 2%;
+}
+
+.cardContent-createCocktail {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
 .formControl {
     margin: 0;
     width: 120px;
     display: 'flex';
+}
+
+.textField-createCocktail {
+    width: 100%;
+    height: 100%;
 }
