--- a/src/App.scss
+++ b/src/App.scss
@@ -18,7 +18,7 @@
   z-index: -1;
   
   display: block;
-  background-image: url('./components/images/teaDrink.jpg');
+  background-image: url('/images/teaDrink.jpg');
   background-size:cover;
   width: 110%;
   height: 110%;
